Fixed footer nav position on mobile screen

--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ p {
 
 @media (max-width: 800px) {
 
-    nav {
+    header nav {
         position: absolute;
     }
 
